Many fixes 1. Now login page displays a success toast after a new account has been    created 2. The Navbar looks smaller on mobile screens 3. If no matches found, a back button is displayed for the user.

--- a/client/src/pages/RecommendedConnections/RecommendedConnections.css
+++ b/client/src/pages/RecommendedConnections/RecommendedConnections.css
@@ -18,6 +18,7 @@
   align-self: center;
 }
 
+.btn-wrapper,
 .empty-users-fallback {
   padding: 1rem;
 }
